-
Type:
Bug
-
Resolution: Fixed
-
Priority:
Major - P3
-
Affects Version/s: None
-
Component/s: None
-
Query Optimization
-
Fully Compatible
-
ALL
-
None
-
None
-
None
-
None
-
None
-
None
-
None
Dereference null return value
If the function actually returns a null value, a null pointer dereference will occur. Return value of function which returns null is dereferenced without checking
/data/mci/cc8eddc55985d182e6e6a30c4cdae2b6/bazel_cache/8ae4f993bef1c7adf43d454bd49b17a1/execroot/_main/src/mongo/s/commands/query_cmd/cluster_find_and_modify_cmd.cpp:296: NULL_RETURNS 164134 Assigning: "<temporary>" = "nullptr" return value from "extraInfo".
/data/mci/cc8eddc55985d182e6e6a30c4cdae2b6/bazel_cache/8ae4f993bef1c7adf43d454bd49b17a1/execroot/_main/src/mongo/s/commands/query_cmd/cluster_find_and_modify_cmd.cpp:296: NULL_RETURNS 164134 Attempting to access the managed object of an empty smart pointer "<temporary>".
- is duplicated by
-
SERVER-108436 Coverity analysis defect 164481: Dereference null return value
-
- Closed
-