SERVER-108437 do not dereference potentially null command error info (#39551)

GitOrigin-RevId: 43a15f302b6b0f9848097bb580c18f6dc30a8427